# Changelog
This is the changelog for the fosite project.

## [Unreleased]
#### Added
- better performance of gravity_spectral on SX-Aurora
#### Changed
#### Deprecated
#### Removed
#### Fixes
- key printing feature in read.py repaired

## 0.8.0 - 2018-01-08
### Initial version
- 3D hydrodynamics with isothermal/ideal-gas EOS
- new object-oriented design using Fortran 2008 language features
- generic field data types to operate on (marrays)
- support for NEC SX-Aurora Tsubasa vector engine
- new build system using cmake
- for features check [about-page](www.astrophysik.uni-kiel.de/fosite/about.html) 